[package]

name = "errno"
version = "0.3.8"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

license = "MIT OR Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/errno"
repository = "https://github.com/lambda-fairy/rust-errno"
description = "Cross-platform interface to the `errno` variable."
categories = ["no-std", "os"]
rust-version = "1.56"

[dependencies]
# Special dependencies used in rustc-dep-of-std mode.
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.101", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
]

[target.'cfg(target_os="wasi")'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os="hermit")'.dependencies]
libc = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = ["libc/std"]

rustc-dep-of-std = [
    "dep:core",
    "compiler_builtins",
]
